Support for store parameter in geo_shape field

--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/spatial/110_geo_shape_parameters.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/spatial/110_geo_shape_parameters.yml
@@ -17,6 +17,9 @@ setup:
                  type: geo_shape
                  doc_values: false
                  index: false
+              stored:
+                type: geo_shape
+                store: true
   - do:
       bulk:
         refresh: true
@@ -24,11 +27,11 @@ setup:
           - index:
               _index: shapes
               _id: 1
-          - '{"default": "POINT(4.912350 52.374081)", "no_doc_values": "POINT(4.912350 52.374081)", "no_index": "POINT(4.912350 52.374081)", "no_doc_values_no_index": "POINT(4.912350 52.374081)"}'
+          - '{"default": "POINT(4.912350 52.374081)", "no_doc_values": "POINT(4.912350 52.374081)", "no_index": "POINT(4.912350 52.374081)", "no_doc_values_no_index": "POINT(4.912350 52.374081)", "stored": "POINT(4.912350 52.374081)"}'
           - index:
               _index: shapes
               _id: 2
-          - '{"default": "POINT(2.327000 48.860000)", "no_doc_values": "POINT(2.327000 48.860000)", "no_index": "POINT(2.327000 48.860000)", "no_doc_values_no_index": "POINT(2.327000 48.860000)"}'
+          - '{"default": "POINT(2.327000 48.860000)", "no_doc_values": "POINT(2.327000 48.860000)", "no_index": "POINT(2.327000 48.860000)", "no_doc_values_no_index": "POINT(2.327000 48.860000)", "stored": "POINT(4.912350 52.374081)"}'
   - do:
       indices.refresh: {}
 
@@ -46,6 +49,8 @@ setup:
   - match: {shapes.mappings.properties.no_doc_values_no_index.type: geo_shape }
   - match: {shapes.mappings.properties.no_doc_values_no_index.index: false }
   - match: {shapes.mappings.properties.no_doc_values_no_index.doc_values: false }
+  - match: {shapes.mappings.properties.stored.type: geo_shape }
+  - match: {shapes.mappings.properties.stored.store: true }
 
 ---
 "Test query default field":
@@ -125,3 +130,23 @@ setup:
   - match: {error.phase: query}
   - match: {error.failed_shards.0.reason.type:  query_shard_exception}
   - match: {error.failed_shards.0.reason.reason: "failed to create query: Cannot search on field [no_doc_values_no_index] since it is not indexed nor has doc values."}
+
+---
+"Test stored field":
+  - do:
+      search:
+        index: shapes
+        body:
+          stored_fields : [stored]
+          query:
+            geo_bounding_box:
+              default:
+                top_left:
+                  lat: 55
+                  lon: 4
+                bottom_right:
+                  lat: 50
+                  lon: 5
+
+  - match: { hits.total.value: 1 }
+  - match: { hits.hits.0.fields.stored: ["AQEAAAC8BRIUP6YTQAmH3uLhL0pA"] }
