Add two important missing release highlights
TSDS has been in tech preview for 18 months and the switch to GA was
done as part of two docs-only PRs, and as a result no changelog entries
were made, and certainly no release highlights.

We've manually created the changelog entries with release highlights,
using the PR numbers for the docs-only changes, which are not the actual
feature PRs, but still the most recent PRs related to these features
and certainly the PRs associated with the change from tech-preview to GA.

--- a/docs/changelog/91956.yaml
+++ b/docs/changelog/91956.yaml
@@ -21,4 +21,4 @@ highlight:
     a very similar geographic area on the planet, as well as the fact that the distance between tile centers is
     very similar in all directions, and consistent across the map.
     These benefits are now available to all Elasticsearch users.
-  notable: true
+  notable: false
