--- a/docs/changelog/92395.yaml
+++ b/docs/changelog/92395.yaml
@@ -8,4 +8,4 @@ highlight:
   body: |-
     The `set` and `append` ingest processors that use mustache templates are
     significantly faster.
-  notable: true
+  notable: false
