Require the manage index privilege on the underlying indices of a SearchApplication
This change ensures that we use the current user to create the alias for a SearchApplication.
This is required since we rely on the user to have the index manage privilege on the underlying indices
as well as the Search Application name (that we use as the alias name).

--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_search_application_put.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_search_application_put.yml
@@ -92,7 +92,7 @@ teardown:
       search_application.put:
         name: test-error-search-application
         body:
-          indices: [ "test-index1", "index-does-not-exist" ]
+          indices: [ "test-index1", "test-index-does-not-exist" ]
 
 ---
 "Create Search Application - Resource already exists":
@@ -115,3 +115,14 @@ teardown:
 
   - match: { error.type: "version_conflict_engine_exception" }
 
+---
+"Create Search Application - Insufficient privilege":
+  - do:
+      catch: forbidden
+      search_application.put:
+        name: another-search-application
+        create: true
+        body:
+          indices: [ "another-index" ]
+
+  - match: { error.type: "security_exception" }
