--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/30_search_application_get.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/30_search_application_get.yml
@@ -19,7 +19,7 @@ setup:
 
   - do:
       search_application.put:
-        name: my-test-search-application
+        name: test-search-application
         body:
           indices: [ "test-index1", "test-index2"]
           analytics_collection_name: "test-analytics"
@@ -28,19 +28,19 @@ setup:
 teardown:
   - do:
       search_application.delete:
-        name: my-test-search-application
+        name: test-search-application
         ignore: 404
 
 ---
 "Get Search Application":
   - do:
       search_application.get:
-        name: my-test-search-application
+        name: test-search-application
 
-  - match: { name: "my-test-search-application" }
+  - match: { name: "test-search-application" }
   - match: { indices: [ "test-index1", "test-index2" ] }
   - match: { analytics_collection_name: "test-analytics" }
-  - match: { search_alias: "my-test-search-application" }
+  - match: { search_alias: "test-search-application" }
   - gte: { updated_at_millis: 0 }
 
 ---
