--- a/docs/changelog/91519.yaml
+++ b/docs/changelog/91519.yaml
@@ -6,8 +6,8 @@ issues: []
 highlight:
   title: Time series (TSDS) GA
   body: |-
-    Time Series Data Stream (TSDS) is a feature for optimizing Elasticsearch indices for time series data.
-    This involves sorting the indices to achieve better compression and using synthetic_source to reduce index size.
+    <<tsds,Time Series Data Stream (TSDS)>> is a feature for optimizing Elasticsearch indices for time series data.
+    This involves sorting the indices to achieve better compression and using synthetic _source to reduce index size.
     As a result, TSDS indices are significantly smaller than non-time_series indices that contain the same data.
     TSDS is particularly useful for managing time series data with high volume.
   notable: true
