Apply review comments

--- a/docs/changelog/94420.yaml
+++ b/docs/changelog/94420.yaml
@@ -1,5 +1,5 @@
 pr: 94420
-summary: Provide security headers when calling `_validate`
+summary: Secondary credentials used with transforms should only require source and destination index privileges, not transform privileges
 area: Transform
 type: bug
 issues: []
