--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/cluster.desired_balance/10_basic.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/cluster.desired_balance/10_basic.yml
@@ -138,7 +138,7 @@ setup:
   - is_true: 'routing_table.test.0.desired.node_ids'
 
 ---
-"Test get desired balance for single shard":
+"Test tier_preference":
 
   - skip:
       version: " - 8.7.99"
