--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/cluster.desired_balance/10_basic.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/cluster.desired_balance/10_basic.yml
@@ -96,7 +96,7 @@ setup:
 
   - is_true: 'cluster_balance_stats.nodes.$node_name'
   - is_true: 'cluster_balance_stats.nodes.$node_name.node_id'
-  - is_true: 'cluster_balance_stats.nodes.$node_name.node_role'
+  - is_true: 'cluster_balance_stats.nodes.$node_name.roles'
 
 ---
 "Test get desired balance for single shard":
@@ -160,4 +160,4 @@ setup:
   - do:
       _internal.get_desired_balance: { }
 
-  - is_true: 'routing_table.test.0.current.tier_preference'
+  - is_true: 'routing_table.test.0.current.0.tier_preference'
