--- a/docs/changelog/94136.yaml
+++ b/docs/changelog/94136.yaml
@@ -1,5 +1,5 @@
 pr: 94136
-summary: Add level parameter validation in rest layer. 
-area: REST API
+summary: Add level parameter validation in REST layer 
+area: Infra/REST API
 type: bug
 issues: [93981]
