--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/50_search_application_list.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/50_search_application_list.yml
@@ -59,6 +59,9 @@ teardown:
 "List Search Applications":
   - do:
       search_application.list: { }
+  - set: { results.0.updated_at_millis: updatedAtMillis0 }
+  - set: { results.1.updated_at_millis: updatedAtMillis1 }
+  - set: { results.2.updated_at_millis: updatedAtMillis2 }
 
   - match: { count: 3 }
 
@@ -66,53 +69,57 @@ teardown:
   - match: { results.0.name: "another-test-search-application" }
   - match: { results.0.indices: [ "test-index1", "test-index2" ] }
   - match: { results.0.analytics_collection_name: "test-another-analytics" }
-  - match: { results.0.updated_at_millis: null }
+  - match: { results.0.updated_at_millis: $updatedAtMillis0 }
 
   - match: { results.1.name: "test-search-application-1" }
   - match: { results.1.indices: [ "test-index1" ] }
   - match: { results.1.analytics_collection_name: "test-analytics1" }
-  - match: { results.1.updated_at_millis: null }
+  - match: { results.0.updated_at_millis: $updatedAtMillis1 }
 
   - match: { results.2.name: "test-search-application-2" }
   - match: { results.2.indices: [ "test-index2" ] }
   - match: { results.2.analytics_collection_name: "test-analytics2" }
-  - match: { results.2.updated_at_millis: null }
+  - match: { results.0.updated_at_millis: $updatedAtMillis2 }
 
 ---
 "Pagination - From":
   - do:
       search_application.list:
         from: 1
+  - set: { results.0.updated_at_millis: updatedAtMillis0 }
+  - set: { results.1.updated_at_millis: updatedAtMillis1 }
 
   - match: { count: 3 }
 
   - match: { results.0.name: "test-search-application-1" }
   - match: { results.0.indices: [ "test-index1" ] }
   - match: { results.0.analytics_collection_name: "test-analytics1" }
-  - match: { results.0.updated_at_millis: null }
+  - match: { results.0.updated_at_millis: $updatedAtMillis0 }
 
   - match: { results.1.name: "test-search-application-2" }
   - match: { results.1.indices: [ "test-index2" ] }
   - match: { results.1.analytics_collection_name: "test-analytics2" }
-  - match: { results.1.updated_at_millis: null }
+  - match: { results.0.updated_at_millis: $updatedAtMillis1 }
 
 ---
 "Pagination - Size":
   - do:
       search_application.list:
         size: 2
+  - set: { results.0.updated_at_millis: updatedAtMillis0 }
+  - set: { results.1.updated_at_millis: updatedAtMillis1 }
 
   - match: { count: 3 }
 
   - match: { results.0.name: "another-test-search-application" }
   - match: { results.0.indices: [ "test-index1", "test-index2" ] }
   - match: { results.0.analytics_collection_name: "test-another-analytics" }
-  - match: { results.0.updated_at_millis: null }
+  - match: { results.0.updated_at_millis: $updatedAtMillis0 }
 
   - match: { results.1.name: "test-search-application-1" }
   - match: { results.1.indices: [ "test-index1" ] }
   - match: { results.1.analytics_collection_name: "test-analytics1" }
-  - match: { results.1.updated_at_millis: null }
+  - match: { results.0.updated_at_millis: $updatedAtMillis1 }
 
 
 ---
@@ -120,18 +127,21 @@ teardown:
   - do:
       search_application.list:
         q: "test-search-application-*"
+  - set: { results.0.updated_at_millis: updatedAtMillis0 }
+  - set: { results.0.updated_at_millis: updatedAtMillis1 }
 
   - match: { count: 2 }
 
   - match: { results.0.name: "test-search-application-1" }
   - match: { results.0.indices: [ "test-index1" ] }
   - match: { results.0.analytics_collection_name: "test-analytics1" }
-  - match: { results.0.updated_at_millis: null }
+  - match: { results.0.updated_at_millis: $updatedAtMillis0 }
 
   - match: { results.1.name: "test-search-application-2" }
   - match: { results.1.indices: [ "test-index2" ] }
   - match: { results.1.analytics_collection_name: "test-analytics2" }
-  - match: { results.1.updated_at_millis: null }
+  - match: { results.0.updated_at_millis: $updatedAtMillis1 }
+
 ---
 "Empty query results":
   - do:
