--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_search_application_put.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_search_application_put.yml
@@ -59,6 +59,12 @@ teardown:
         name: test-search-application
         body:
           indices: [ "test-index1", "test-index2" ]
+          template:
+            script:
+              source:
+                query:
+                  query_string:
+                    query: "{{query_string}}"
 
   - match: { result: "created" }
 
@@ -67,6 +73,29 @@ teardown:
         name: test-search-application
 
   - is_true: ''
+
+  - match: { "foo" }
+  - do:
+      search_application.get:
+        name: test-search-application
+  - match: { indices: [ "test-index1", "test-index2" ] }
+  - match: {
+      template: {
+        script: {
+          source: {
+            query: {
+              query_string: {
+                query: "{{query_string}}"
+              }
+            }
+          },
+          lang: "mustache",
+          options: {
+            content_type: "application/json;charset=utf-8"
+          }
+        }
+      }
+    }
 ---
 "Update Search Application":
   - do:
@@ -74,14 +103,26 @@ teardown:
         name: test-updated-search-application
         body:
           indices: [ "test-index1", "test-index2" ]
+          template:
+            script:
+              source:
+                query:
+                  query_string:
+                    query: "{{query_string}}"
 
   - do:
       search_application.put:
         name: test-updated-search-application
         body:
           indices: [ "test-index3", "test-index4" ]
-
+          template: null
   - match: { result: "updated" }
+
+  - do:
+     search_application.get:
+       name: test-updated-search-application
+  - match: { template: null }
+  - match: { indices: [ "test-index3", "test-index4" ] }
 
 ---
 "Create Search Application - Index does not exist":
