--- a/build.gradle
+++ b/build.gradle
@@ -156,6 +156,8 @@ if (project.gradle.startParameter.taskNames.find { it.startsWith("checkPart") } 
 
 subprojects { proj ->
   apply plugin: 'elasticsearch.base'
+
+
 }
 
 allprojects {
@@ -231,6 +233,16 @@ allprojects {
       it.enabled = false
     }
   }
+
+//  if (GradleUtils.findByName(it.tasks, 'test') != null) {
+//    apply plugin: 'jacoco'
+//    test {
+//      finalizedBy jacocoTestReport // report is always generated after tests run
+//    }
+//    jacocoTestReport {
+//      dependsOn test // tests are required to run before generating the report
+//    }
+//  }
 
   project.afterEvaluate {
     // Ensure similar tasks in dependent projects run first. The projectsEvaluated here is
