--- a/docs/changelog/94680.yaml
+++ b/docs/changelog/94680.yaml
@@ -1,5 +1,5 @@
 pr: 94680
-summary: Allow preserving headers on context stash
+summary: Allow preserving specific headers on thread context stash
 area: Infra/Core
 type: enhancement
 issues: []
