--- a/server/build.gradle
+++ b/server/build.gradle
@@ -236,7 +236,7 @@ tasks.named("thirdPartyAudit").configure {
     )
     ignoreMissingClasses 'javax.xml.bind.DatatypeConverter'
 
-    if (BuildParams.runtimeJavaVersion == JavaVersion.VERSION_20 || BuildParams.isRuntimeJavaHomeSet == false) {
+    if (BuildParams.runtimeJavaVersion == JavaVersion.VERSION_20) {
       ignoreMissingClasses(
         // This class was removed in Java 20 but is only referenced by a class that requires preview features anyhow
         // See: https://github.com/apache/lucene/pull/12042
