--- a/docs/changelog/94722.yaml
+++ b/docs/changelog/94722.yaml
@@ -2,4 +2,5 @@ pr: 94722
 summary: Check no unassigned shards even if the node already left
 area: Infra/Core
 type: bug
-issues: []
+issues:
+ - 88635
