--- a/docs/changelog/94722.yaml
+++ b/docs/changelog/94722.yaml
@@ -2,5 +2,4 @@ pr: 94722
 summary: Check no unassigned shards even if the node already left
 area: Infra/Core
 type: bug
-issues:
- - 88635
+issues: []
