--- a/docs/changelog/94734.yaml
+++ b/docs/changelog/94734.yaml
@@ -1,5 +1,5 @@
 pr: 94734
-summary: Fix bug 94733 `geo_line` not respecting `sort_order`
+summary: Fix bug where `geo_line` does not respect `sort_order`
 area: Geo
 type: bug
 issues:
