--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/spatial/10_geo_bounds.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/spatial/10_geo_bounds.yml
@@ -206,3 +206,78 @@ setup:
   - close_to: { aggregations.my_agg.bounds.top_left.lon: { value: -10.0, error: 0.00001 } }
   - close_to: { aggregations.my_agg.bounds.bottom_right.lat: { value: -10.0, error: 0.00001 } }
   - close_to: { aggregations.my_agg.bounds.bottom_right.lon: { value: 10.0, error: 0.00001 } }
+
+---
+"Test geo_bounds aggregation on geo_shape crossing dateline":
+  - do:
+      indices.create:
+        index: locations
+        body:
+          mappings:
+            properties:
+              location:
+                type: geo_shape
+
+  - do:
+      index:
+        index:  locations
+        id:     big_rectangle
+        body:   { location: "POLYGON((170 -10, -170 -10, -170 10, 170 10, 170 -10))" }
+
+  - do:
+      indices.refresh: {}
+
+  - do:
+      search:
+        rest_total_hits_as_int: true
+        index: locations
+        size: 0
+        body:
+          aggs:
+            my_agg:
+              geo_bounds:
+                field: location
+                wrap_longitude: true
+  - match: { hits.total: 1 }
+  - close_to: { aggregations.my_agg.bounds.top_left.lat: { value: 10.0, error: 0.00001 } }
+  - close_to: { aggregations.my_agg.bounds.top_left.lon: { value: 170.0, error: 0.00001 } }
+  - close_to: { aggregations.my_agg.bounds.bottom_right.lat: { value: -10.0, error: 0.00001 } }
+  - close_to: { aggregations.my_agg.bounds.bottom_right.lon: { value: -170.0, error: 0.00001 } }
+
+
+---
+"Test geo_bounds aggregation on geo_shape crossing dateline without wrap_longitude":
+  - do:
+      indices.create:
+        index: locations
+        body:
+          mappings:
+            properties:
+              location:
+                type: geo_shape
+
+  - do:
+      index:
+        index:  locations
+        id:     big_rectangle
+        body:   { location: "POLYGON((170 -10, -170 -10, -170 10, 170 10, 170 -10))" }
+
+  - do:
+      indices.refresh: {}
+
+  - do:
+      search:
+        rest_total_hits_as_int: true
+        index: locations
+        size: 0
+        body:
+          aggs:
+            my_agg:
+              geo_bounds:
+                field: location
+                wrap_longitude: false
+  - match: { hits.total: 1 }
+  - close_to: { aggregations.my_agg.bounds.top_left.lat: { value: 10.0, error: 0.00001 } }
+  - close_to: { aggregations.my_agg.bounds.top_left.lon: { value: -180.0, error: 0.00001 } }
+  - close_to: { aggregations.my_agg.bounds.bottom_right.lat: { value: -10.0, error: 0.00001 } }
+  - close_to: { aggregations.my_agg.bounds.bottom_right.lon: { value: 180.0, error: 0.00001 } }
