--- a/x-pack/plugin/esql/qa/testFixtures/src/main/resources/mapping-default.json
+++ b/x-pack/plugin/esql/qa/testFixtures/src/main/resources/mapping-default.json
@@ -55,6 +55,9 @@
         },
         "avg_worked_seconds" : {
             "type" : "long"
+        },
+        "job_positions" : {
+          "type" : "keyword"
         }
     }
 }
