--- a/x-pack/plugin/esql/build.gradle
+++ b/x-pack/plugin/esql/build.gradle
@@ -17,6 +17,7 @@ dependencies {
   compileOnly project(xpackModule('ql'))
   implementation project('compute')
   implementation project('compute:ann')
+  implementation project(':libs:elasticsearch-dissect')
   annotationProcessor project('compute:gen')
 
   testImplementation project('qa:testFixtures')
