refactor and cleanup

--- a/build.gradle
+++ b/build.gradle
@@ -269,8 +269,10 @@ allprojects {
         }
       }
     }
+
   }
 
+  apply plugin: 'elasticsearch.kover'
   apply plugin: 'elasticsearch.formatting'
 }
 
