--- a/build-tools-internal/build.gradle
+++ b/build-tools-internal/build.gradle
@@ -187,6 +187,10 @@ gradlePlugin {
       id = 'elasticsearch.internal-yaml-rest-test'
       implementationClass = 'org.elasticsearch.gradle.internal.test.rest.InternalYamlRestTestPlugin'
     }
+    kover {
+      id = 'elasticsearch.kover'
+      implementationClass = 'org.elasticsearch.gradle.internal.TransportClassesCoveragePlugin'
+    }
   }
 }
 
@@ -311,7 +315,7 @@ dependencies {
   testImplementation buildLibs.json.assert
   integTestImplementation buildLibs.xmlunit.core
   api 'org.jetbrains.kotlinx:kover:0.6.1'
-  api 'org.jetbrains.intellij.deps:intellij-coverage-agent:1.0.683'
+//  api 'org.jetbrains.intellij.deps:intellij-coverage-agent:1.0.683'
 
 }
 
