--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/spatial/60_geo_line.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/spatial/60_geo_line.yml
@@ -194,6 +194,37 @@ setup:
   - is_false: aggregations.path.properties.complete
 
 ---
+"Test geo_line aggregation on geo points limit and sort":
+  - do:
+      search:
+        rest_total_hits_as_int: true
+        index: locations
+        size: 0
+        body:
+          aggs:
+            path:
+              geo_line:
+                size: 2
+                include_sort: true
+                sort_order: "desc"
+                point:
+                  field: location
+                sort:
+                  field: rank
+  - match: { hits.total:  3 }
+  - match: { aggregations.path.type: "Feature" }
+  - match: { aggregations.path.geometry.type: "LineString" }
+  - length: { aggregations.path.geometry.coordinates: 2 }
+  - match: { aggregations.path.geometry.coordinates.0.0: 13.371398 }
+  - match: { aggregations.path.geometry.coordinates.0.1: 47.829303 }
+  - match: { aggregations.path.geometry.coordinates.1.0: 13.37183 }
+  - match: { aggregations.path.geometry.coordinates.1.1: 48.20842 }
+  - is_false: aggregations.path.properties.complete
+  - length: { aggregations.path.properties.sort_values: 2 }
+  - match: { aggregations.path.properties.sort_values.0: 2.0 }
+  - match: { aggregations.path.properties.sort_values.1: 1.2 }
+
+---
 "Test geo_line aggregation on geo points with no grouping":
   - do:
       search:
