Need to wait for yellow instead of green

--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/analytics/reset_tracking_rate.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/analytics/reset_tracking_rate.yml
@@ -65,7 +65,7 @@ setup:
                 type: date
   - do:
       cluster.health:
-        wait_for_status: green
+        wait_for_status: yellow
 
   - do:
       bulk:
