Revert move of DataStreamsActionUtil and expose it to dlm

--- a/modules/dlm/build.gradle
+++ b/modules/dlm/build.gradle
@@ -19,7 +19,8 @@ esplugin {
 }
 archivesBaseName = 'dlm'
 dependencies {
-  testImplementation project(':modules:data-streams')
+  implementation project(path: ':modules:data-streams')
+    testImplementation project(':modules:data-streams')
 }
 
 addQaCheckDependencies(project)
