--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/45_knn_search_byte.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/45_knn_search_byte.yml
@@ -187,13 +187,13 @@ setup:
             num_candidates: 3
             k: 3
             field: vector
-            similarity: 82
-            query_vector: [127.0, -128.0, 0.0, 10.0, -1.0]
+            similarity: 1.0
+            query_vector: [5, 4.0, 3, 2.0, 127]
 
   - length: {hits.hits: 1}
 
-  - match: {hits.hits.0._id: "2"}
-  - match: {hits.hits.0.fields.name.0: "moose.jpg"}
+  - match: {hits.hits.0._id: "3"}
+  - match: {hits.hits.0.fields.name.0: "rabbit.jpg"}
 ---
 "Vector similarity with filter only":
   - do:
@@ -205,14 +205,14 @@ setup:
             num_candidates: 3
             k: 3
             field: vector
-            similarity: 82
-            query_vector: [127.0, -128.0, 0.0, 10.0, -1.0]
-            filter: {"term": {"name": "moose.jpg"}}
+            similarity: 1.0
+            query_vector: [5, 4.0, 3, 2.0, 127]
+            filter: {"term": {"name": "rabbit.jpg"}}
 
   - length: {hits.hits: 1}
 
-  - match: {hits.hits.0._id: "2"}
-  - match: {hits.hits.0.fields.name.0: "moose.jpg"}
+  - match: {hits.hits.0._id: "3"}
+  - match: {hits.hits.0.fields.name.0: "rabbit.jpg"}
 
   - do:
       search:
@@ -223,8 +223,8 @@ setup:
             num_candidates: 3
             k: 3
             field: vector
-            similarity: 82
-            query_vector: [127.0, -128.0, 0.0, 10.0, -1.0]
+            similarity: 1
+            query_vector: [5, 4.0, 3, 2.0, 127]
             filter: {"term": {"name": "cow.jpg"}}
 
   - length: {hits.hits: 0}
