tweaks around includes/excludes

--- a/build-tools-internal/build.gradle
+++ b/build-tools-internal/build.gradle
@@ -315,7 +315,7 @@ dependencies {
   testImplementation buildLibs.json.assert
   integTestImplementation buildLibs.xmlunit.core
   api 'org.jetbrains.kotlinx:kover:0.6.1'
-//  api 'org.jetbrains.intellij.deps:intellij-coverage-agent:1.0.683'
+  api 'org.jetbrains.intellij.deps:intellij-coverage-agent:1.0.683'
 
 }
 
