--- a/modules/ingest-attachment/build.gradle
+++ b/modules/ingest-attachment/build.gradle
@@ -90,7 +90,7 @@ dependencies {
 
 restResources {
   restApi {
-    include '_common', 'cluster', 'nodes', 'ingest', 'index', 'get'
+    include '_common', 'cluster', 'nodes', 'ingest', 'index', 'get', 'upload_action'
   }
 }
 
